change fun fact title

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Jiayi (Jane) Chen"
 title_separator          : "-"
 name                     : &name "Jiayi (Jane) Chen"
-description              : &description "PhD Student at UT Austin"
+description              : &description "CS PhD Student at UT Austin"
 url                      : https://janecjy.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "janecjy/janecjy.github.io"
